<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/reminder_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:checkedButton="@id/btn_remind_on_time">

        <RadioButton
            android:id="@+id/btn_remind_on_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/label_reminder_on_time"/>

        <RadioButton
            android:id="@+id/btn_remind_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/label_reminder_before"/>

    </RadioGroup>

    <Spinner
        android:id="@+id/choose_remind_before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:entries="@array/remind_before_choices"
        app:layout_constraintTop_toBottomOf="@id/reminder_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"/>

    <EditText
        android:id="@+id/input_before"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_remind_before"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/choose_unit"
        android:hint="@string/label_task_time_remind_before"
        android:layout_weight="1"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:text="1"/>

    <Spinner
        android:id="@+id/choose_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/choose_remind_before"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:minHeight="56dp"
        android:layout_weight="1"
        android:entries="@array/remind_before_units" />


</androidx.constraintlayout.widget.ConstraintLayout>