<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rahulstech.android.taskschedulder.activity.CreateOrEditTaskActivity">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_task_description_length"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_task_description"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView android:id="@+id/task_date_start"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/background_rounded_border"
            android:layout_marginTop="18dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:maxLines="2"
            android:textAlignment="center"
            app:drawableEndCompat="@drawable/ic_baseline_calendar_month_24"
            android:drawablePadding="12dp" />

        <TextView android:id="@+id/task_time"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/background_rounded_border"
            android:layout_marginTop="18dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:maxLines="2"
            android:textAlignment="center"
            app:drawableEndCompat="@drawable/ic_baseline_clock_filled_24"
            android:drawablePadding="12dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="18dp">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginEnd="10dp"
                android:text="@string/label_clear" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/label_save"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>