<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TaskReminderFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="22dp"
            android:paddingBottom="22dp">

            <TextView android:id="@+id/task_time"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/background_rounded_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:maxLines="2"
                android:textAlignment="center"
                app:drawableEndCompat="@drawable/ic_baseline_clock_filled_24"
                android:drawablePadding="12dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggle_time_reminder_input"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/task_time"
                app:layout_constraintEnd_toEndOf="parent"
                android:checked="false"
                android:enabled="false"/>

            <TextView
                android:id="@+id/label_toggle_time_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:drawableStartCompat="@drawable/ic_baseline_reminder_24"
                android:drawablePadding="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintTop_toBottomOf="@id/task_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/toggle_time_reminder_input"
                app:layout_constraintEnd_toStartOf="@id/toggle_time_reminder_input"
                android:text="@string/label_toggle_time_reminder"/>

            <LinearLayout
                android:id="@+id/container_time_reminder_input"
                app:layout_constraintTop_toBottomOf="@id/label_toggle_time_reminder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <RadioGroup
                    android:id="@+id/reminder_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:checkedButton="@id/btn_remind_on_time">

                    <RadioButton
                        android:id="@+id/btn_remind_on_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/label_reminder_on_time"/>

                    <RadioButton
                        android:id="@+id/btn_remind_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/label_reminder_before"/>

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/container_remind_before_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <Spinner
                        android:id="@+id/choose_remind_before"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:minHeight="56dp"
                        android:layout_marginTop="24dp"
                        android:entries="@array/remind_before_choices"
                        app:layout_constraintTop_toBottomOf="@id/reminder_options"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <LinearLayout
                        android:id="@+id/container_custom_remind_before_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <EditText
                            android:id="@+id/input_before"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_task_time_remind_before"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="1"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:inputType="numberSigned"
                            android:importantForAutofill="no"
                            tools:text="1"/>

                        <Spinner
                            android:id="@+id/choose_unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="56dp"
                            android:layout_weight="1"
                            android:entries="@array/remind_before_units" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>